@startuml

title __GUI's Class Diagram__\n

  namespace com.codecool.processwatch.gui {
    class com.codecool.processwatch.gui.App {
        + App()
    }
  }
  

  namespace com.codecool.processwatch.gui {
    class com.codecool.processwatch.gui.FxMain {
        {static} - TITLE : String
        {static} + main()
        + start()
    }
  }
  

  namespace com.codecool.processwatch.gui {
    class com.codecool.processwatch.gui.GuiProcessDisplay {
        - displayList : ObservableList<ProcessView>
        + GuiProcessDisplay()
        # addProcess()
        # clear()
    }
  }
  

  namespace com.codecool.processwatch.gui {
    class com.codecool.processwatch.gui.ProcessView {
        - args : StringProperty
        - parentPid : LongProperty
        - pid : LongProperty
        - processName : StringProperty
        - userName : StringProperty
        + ProcessView()
        + argsProperty()
        + getArgs()
        + getParentPid()
        + getPid()
        + getProcessName()
        + getUserName()
        + parentPidProperty()
        + pidProperty()
        + processNameProperty()
        + setArgs()
        + setParentPid()
        + setPid()
        + setProcessName()
        + setUserName()
        + userNameProperty()
        {static} - merge()
    }
  }
  

  com.codecool.processwatch.gui.App -up-|> com.codecool.processwatch.domain.ProcessWatchApp
  com.codecool.processwatch.gui.FxMain -up-|> javafx.application.Application
  com.codecool.processwatch.gui.FxMain o-- com.codecool.processwatch.gui.App : app
  com.codecool.processwatch.gui.GuiProcessDisplay -up-|> com.codecool.processwatch.domain.ProcessDisplay


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
